[Ajay] add the department selection feature new department created by the super admin
