# routes/index.js
@@ -1,6 +1,7 @@
 const express = require("express");
 const authRoutes = require("../modules/auth/auth.routes");
 const adminRoutes = require("../modules/admin/admin.routes");
+const departmentRoutes = require("../modules/department/department.routes");
 const superAdminRoutes = require("../modules/superadmin/superadmin.routes");
 
 const router = express.Router();
@@ -11,6 +12,7 @@ router.get("/health", (req, res) => {
 
 router.use("/auth", authRoutes);
 router.use("/admin", adminRoutes);
+router.use("/departments", departmentRoutes);
 router.use("/superadmin", superAdminRoutes);
 
 module.exports = router;
